--- a/Coronavirus_Tweet_Sentiment_Analysis.ipynb
+++ b/Coronavirus_Tweet_Sentiment_Analysis.ipynb
@@ -5407,13 +5407,13 @@
         "\n",
         "*   The Gradient Boosting classifier (GBM) and XGBoost classifier gave identical results of 0.72 F1-score.\n",
         "\n",
-        "*   The Gradient Boosting classifier (GBM), XGBoost classifier and random forrest classifer took a lot of time to run.\n",
+        "*   The Gradient Boosting classifier (GBM), XGBoost classifier and random forrest classifier took a lot of time to run.\n",
         "\n",
         "\n",
-        "*   Logistic Regression gives the highest result of about 0.80 F1-score of all the implemented models ,follwed by the Ridge regression and SVM giving the highest result of about 0.79 and 0.76 F1-score respectively compared to all other implemented models.\n",
+        "*   Logistic Regression gives the highest result of about 0.80 F1-score of all the implemented models ,followed by the Ridge regression and SVM giving the highest result of about 0.79 and 0.76 F1-score respectively compared to all other implemented models.\n",
         "   \n",
         "\n",
-        "* While selecting a model, it should have good explainability and less complexibility. As per the result, I have two models with higher accuracy and less error. Therefore,we can select any of them.  \n",
+        "* While selecting a model, it should have good explainability and less complexibility. As per the result, I have three models with higher accuracy and less error. Therefore,we can select any of them.  \n",
         "\n",
         "\n",
         "\n",
@@ -5426,7 +5426,7 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMXcFBt/l1sAFDDu1ddZ43k",
+      "authorship_tag": "ABX9TyOSncWJEWq+eqpasAwMnQKB",
       "include_colab_link": true
     },
     "gpuClass": "standard",
